# phishing-analyzer

./: .dockerignore  .gitignore  DockerFile  Dockerfile  README.md  RELEASE_TEMPLATE.md  api_main.py  cli.py  docker-compose.yml  phish-analyze.py  pyproject.toml
phish_analyzer/: attack_mapping.py  colors.py  core.py  html_render.py  pdfReport.py  rdapHelper.py  social_engineering.py  threat_intel.py  yara_scanner.py
phish_analyzer/config/: domain-whitelist.txt  version.txt
phish_analyzer/yara_rules/: credential_harvesting.yar  known_kits.yar  macro_documents.yar  suspicious_html.yar
